Compiler/fasto/tests/replicate_neg2.err
Type error: Replicate: expected first argument to be an integer at line 2, column 13