Compiler/fasto/tests/replicate_neg2.fo
fun int main () = 
    let r = replicate(true, 10) in 0